Quick and dirty photo viewer implementation with some refactoring